--- a/Grading/lab-03.html
+++ b/Grading/lab-03.html
@@ -5,147 +5,63 @@
   </head>
   <body>
     <h1>Lab 03 - Graded Solution</h1>
-    <p><b>You scored 0% = 0.0 points for this lab.</b></p>
+    <p><b>You scored 60% = 1.7999999999999998 points for this lab.</b></p>
     <ul>
       <li><b>Sort ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.113 sec</Li>
-<li><pre>AssertionError: Expected [2, 3, 4, 7, 9, 10] but got None</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpfyv927n3/lab03-test.py", line 12, in test1_1
-    assertEquals(sortedints, [2, 3, 4, 7, 9, 10])
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
-    raise AssertionError(message)
-AssertionError: Expected [2, 3, 4, 7, 9, 10] but got None
-</pre></li>
+      <li>Your solution succeeded taking 0.164 sec</Li>
       </ul>
       </li>
       <li><b>Sort strings based on their last character</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.130 sec</Li>
-<li><pre>AssertionError: Expected ['zasa', 'abcd', 'aacz'] but got None</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpjcyjv2qx/lab03-test.py", line 22, in test1_2
-    assertEquals(sortedstrs, [ 'zasa', 'abcd', 'aacz' ])
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
-    raise AssertionError(message)
-AssertionError: Expected ['zasa', 'abcd', 'aacz'] but got None
-</pre></li>
+      <li>Your solution succeeded taking 0.178 sec</Li>
       </ul>
       </li>
       <li><b>Sort students on their GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.112 sec</Li>
-<li><pre>AssertionError: Expected [<Student object at 0x106ae5a60>, <Student object at 0x106ae5c70>, <Student object at 0x106b26e20>, <Student object at 0x106b26e80>] but got None</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpboakunam/lab03-test.py", line 32, in test1_3
-    assertEquals(sortedstudents, expected)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
-    raise AssertionError(message)
-AssertionError: Expected [<Student object at 0x106ae5a60>, <Student object at 0x106ae5c70>, <Student object at 0x106b26e20>, <Student object at 0x106b26e80>] but got None
-</pre></li>
+      <li>Your solution succeeded taking 0.137 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.111 sec</Li>
-<li><pre>AssertionError: Expected 1 but got None</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp4fxom2a6/lab03-test.py", line 42, in test1_4
-    assertEquals(m.module.mybinsearch(sortedints, 3, intcmp), 1)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
-    raise AssertionError(message)
-AssertionError: Expected 1 but got None
-</pre></li>
+      <li>Your solution succeeded taking 0.119 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for students by GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.117 sec</Li>
-<li><pre>AssertionError: Expected 2 but got None</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpzo7to5bx/lab03-test.py", line 55, in test1_5
-    assertEquals(m.module.mybinsearch(sortedstudents, 3.5, stbincmp), 2)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
-    raise AssertionError(message)
-AssertionError: Expected 2 but got None
-</pre></li>
+      <li>Your solution succeeded taking 0.137 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.112 sec</Li>
-<li><pre>AssertionError: Expected true</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmptuhdztgg/lab03-test.py", line 64, in test2_1
-    assertTrue(p.search("l"))
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 33, in assertTrue
-    raise AssertionError(template)
-AssertionError: Expected true
-</pre></li>
+      <li>Your solution succeeded taking 0.117 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in Moby Dick</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.953 sec</Li>
-<li><pre>AssertionError: Expected true</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp2jk3l_fd/lab03-test.py", line 82, in test2_2
-    assertTrue(p.search("Moby"))
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 33, in assertTrue
-    raise AssertionError(template)
-AssertionError: Expected true
-</pre></li>
+      <li>Your solution succeeded taking 4.665 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution failed this test case! taking 0.116 sec</Li>
+      <li>Your solution failed this test case! taking 0.177 sec</Li>
 <li><pre>AssertionError: Expected true</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp42gigk2t/lab03-test.py", line 90, in test3_1
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpfo7vqh9k/lab03-test.py", line 90, in test3_1
     assertTrue(s.contains("l"))
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 33, in assertTrue
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/assertions.py", line 80, in assertTrue
     raise AssertionError(template)
 AssertionError: Expected true
 </pre></li>
@@ -154,16 +70,16 @@ AssertionError: Expected true
       <li><b>Search for substrings in Moby Dick using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution failed this test case! taking 1.947 sec</Li>
+      <li>Your solution failed this test case! taking 5.218 sec</Li>
 <li><pre>AssertionError: Expected true</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp9cw_45kc/lab03-test.py", line 105, in test3_2
-    assertTrue(s.contains("Moby Dick"))
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 33, in assertTrue
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpn6xbh4w1/lab03-test.py", line 105, in test3_2
+    assertTrue(s.contains("Moby-Dick"))
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/assertions.py", line 80, in assertTrue
     raise AssertionError(template)
 AssertionError: Expected true
 </pre></li>
