--- a/Grading/lab-04.html
+++ b/Grading/lab-04.html
@@ -5,113 +5,100 @@
   </head>
   <body>
     <h1>Lab 04 - Graded Solution</h1>
-    <p><b>You scored 15% = 0.3 points for this lab.</b></p>
+    <p><b>You scored 25% = 0.5 points for this lab.</b></p>
     <ul>
       <li><b>Testing subscript-based acess</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution succeeded taking 0.300 sec</Li>
+      <li>Your solution succeeded taking 0.143 sec</Li>
       </ul>
       </li>
       <li><b>test stringification</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution failed this test case! taking 0.298 sec</Li>
-<li><pre>TypeError: __str__ returned non-string (type NoneType)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
-    result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpook_1u97/lab04-test.py", line 64, in test3_2
-    assertEquals('[]', str(lst))
-TypeError: __str__ returned non-string (type NoneType)
-</pre></li>
+      <li>Your solution succeeded taking 0.161 sec</Li>
       </ul>
       </li>
       <li><b>testing single-element manipulation</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.296 sec</Li>
-<li><pre>TypeError: 'NoneType' object cannot be interpreted as an integer</pre></li>
+      <li>Your solution failed this test case! taking 0.141 sec</Li>
+<li><pre>AttributeError: Method "append" not supported on constrained list!</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7ljpgopq/lab04-test.py", line 92, in test3_3
-    assertEquals(data, arrayListToList(lst))
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7ljpgopq/lab04-test.py", line 7, in arrayListToList
-    return list(a.data._as_list()[:len(a)])
-TypeError: 'NoneType' object cannot be interpreted as an integer
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpzqzdebvm/lab04-test.py", line 89, in test3_3
+    lst.append(to_add)
+  File "<tested-program>", line 138, in append
+  File "<tested-program>", line 38, in __getattribute__
+AttributeError: Method "append" not supported on constrained list!
 </pre></li>
       </ul>
       </li>
       <li><b>testing predicates</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.292 sec</Li>
-<li><pre>TypeError: __str__ returned non-string (type NoneType)</pre></li>
+      <li>Your solution failed this test case! taking 0.145 sec</Li>
+<li><pre>TypeError: iter() returned non-iterator of type 'NoneType'</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp5wjkl1y3/lab04-test.py", line 135, in test1_4
-    assertEquals(lst, lst2)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 52, in assertEquals
-    message = template.format(got=got, expected=expected, **kw)
-TypeError: __str__ returned non-string (type NoneType)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmperb6sc8f/lab04-test.py", line 139, in test1_4
+    assertFalse(1 in lst)
+  File "<tested-program>", line 179, in __contains__
+TypeError: iter() returned non-iterator of type 'NoneType'
 </pre></li>
       </ul>
       </li>
       <li><b>testing queries</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.298 sec</Li>
-<li><pre>TypeError: 'NoneType' object cannot be interpreted as an integer</pre></li>
+      <li>Your solution failed this test case! taking 0.144 sec</Li>
+<li><pre>TypeError: iter() returned non-iterator of type 'NoneType'</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpzd7xbryd/lab04-test.py", line 155, in test1_5
-    assertEquals(0, len(lst))
-TypeError: 'NoneType' object cannot be interpreted as an integer
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpx0vmgz5c/lab04-test.py", line 156, in test1_5
+    assertEquals(0, lst.count(1))
+  File "<tested-program>", line 237, in count
+TypeError: iter() returned non-iterator of type 'NoneType'
 </pre></li>
       </ul>
       </li>
       <li><b>testing bulk operations</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.285 sec</Li>
-<li><pre>AssertionError: Expected {expected_type} but got {type(got)}</pre></li>
+      <li>Your solution failed this test case! taking 0.162 sec</Li>
+<li><pre>TypeError: iter() returned non-iterator of type 'NoneType'</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpcul06mrm/lab04-test.py", line 196, in test1_6
-    assertIsInstance(lst3, m.module.ArrayList)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 48, in assertIsInstance
-    assertTrue(isinstance(got, expected_type), template)
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 60, in assertTrue
-    raise AssertionError(template)
-AssertionError: Expected {expected_type} but got {type(got)}
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpkop_m35v/lab04-test.py", line 194, in test1_6
+    lst3 = lst+lst2
+  File "<tested-program>", line 253, in __add__
+TypeError: iter() returned non-iterator of type 'NoneType'
 </pre></li>
       </ul>
       </li>
       <li><b>testing iteration</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.300 sec</Li>
+      <li>Your solution failed this test case! taking 0.145 sec</Li>
 <li><pre>TypeError: iter() returned non-iterator of type 'NoneType'</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmphj0kmiir/lab04-test.py", line 238, in test1_7
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpzqp89dlc/lab04-test.py", line 238, in test1_7
     assertEquals(data, [x for x in lst])
 TypeError: iter() returned non-iterator of type 'NoneType'
 </pre></li>
