--- a/Grading/lab-08.html
+++ b/Grading/lab-08.html
@@ -5,194 +5,71 @@
   </head>
   <body>
     <h1>Lab 08 - Graded Solution</h1>
-    <p><b>You scored 0% = 0.0 points for this lab.</b></p>
+    <p><b>You scored 70% = 2.0999999999999996 points for this lab.</b></p>
     <ul>
       <li><b>test_key_heap_1</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.086 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.132 sec</Li>
       </ul>
       </li>
       <li><b>test_key_heap_2</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.090 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.110 sec</Li>
       </ul>
       </li>
       <li><b>test_key_heap_3</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.072 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.117 sec</Li>
       </ul>
       </li>
       <li><b>test_key_heap_4</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.086 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.158 sec</Li>
       </ul>
       </li>
       <li><b>test_key_heap_5</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.071 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.136 sec</Li>
       </ul>
       </li>
       <li><b>test_median_1</b>
       <ul>
       <li>Grade Percentage: 13</li>
-      <li>Your solution failed this test case! taking 0.075 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.110 sec</Li>
       </ul>
       </li>
       <li><b>test_median_2</b>
       <ul>
       <li>Grade Percentage: 13</li>
-      <li>Your solution failed this test case! taking 0.075 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 0.163 sec</Li>
       </ul>
       </li>
       <li><b>test_median_3</b>
       <ul>
       <li>Grade Percentage: 14</li>
-      <li>Your solution failed this test case! taking 0.074 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
-</pre></li>
+      <li>Your solution succeeded taking 7.181 sec</Li>
       </ul>
       </li>
       <li><b>test_topk_students</b>
       <ul>
       <li>Grade Percentage: 30</li>
-      <li>Your solution failed this test case! taking 0.075 sec</Li>
-<li><pre>IndentationError: expected an indented block (<tested-program>, line 29)</pre></li>
+      <li>Your solution failed this test case! taking 0.120 sec</Li>
+<li><pre>AssertionError: Expected None but got [('Gertrud', 53), ('Peter', 33)]</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 29
-    def add(self, x):
-    ^
-IndentationError: expected an indented block
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
+    **pre_hook_info["extra_kwargs"]
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
+    result = test_function(module, *args, **kwargs)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmps_evsejr/lab08-test.py", line 138, in test_topk_students
+    m.module.topk(students, 2, get_age))
+  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/assertions.py", line 58, in assertEquals
+    raise AssertionError(message)
+AssertionError: Expected None but got [('Gertrud', 53), ('Peter', 33)]
 </pre></li>
       </ul>
       </li>
